fixup spacing of the title bar, and more aggressive cleanups

--- a/static/style.css
+++ b/static/style.css
@@ -4,6 +4,7 @@
   --color-footer: #aaa;
   --color-text-main: #000;
   --wrapper-height: 85vh;
+  --wrapper-width: 600px;
   --font-family: "HK Grotesk";
 
   --accent-1: #52A5E9;
@@ -38,35 +39,36 @@ html, body {
   margin: 0;
   padding: 0;
 }
-.wrapper {
+main {
   min-height: var(--wrapper-height);
-  margin: 0;
   padding: 1rem 2rem;
-}
-.content {
   display: flex;
   flex-direction: column;
   margin: 0 auto;
-  max-width: 600px;
+  max-width: var(--wrapper-width);
 }
 
 /* Navigation */
 header {
-  display: flex;
-  justify-content: space-evenly;
-  margin: 0 auto 1rem;
   width: 100%;
-  flex-wrap: wrap;
   border-bottom: 3px solid;
   border-image: linear-gradient(45deg, var(--accent-1) 10%, var(--accent-2), var(--accent-3), var(--accent-4) 90%) 1;
 }
 header a {
   font-size: 1.1rem;
   border-bottom: none !important;
-  padding: 0 0.5rem 0.5rem;
+  padding: 0.5rem;
 }
 header a.active {
   color: var(--color-text-main);
+}
+nav {
+  margin: 0 auto;
+  padding: 0 2rem;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  max-width: var(--wrapper-width);
 }
 
 /* Typography */
@@ -145,7 +147,7 @@ a:hover {
 }
 
 /* Home layout */
-.illo-container {
+.page-title {
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
